--- a/package.json
+++ b/package.json
@@ -23,18 +23,21 @@
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.7",
+    "mongoose-unique-validator": "^2.0.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.6",
-    "@angular/cli": "~8.3.6",
+    "@angular/cli": "^8.3.18",
     "@angular/compiler-cli": "~8.2.8",
     "@angular/language-service": "~8.2.8",
     "@types/jasmine": "~3.3.8",
