--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,9 @@
   "name": "corms",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "start:server": "nodemon ./backend/server.js"
+  },
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
