--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start:server": "nodemon ./backend/server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
